--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@
 
 #titulo{
     font-family: sans-serif;
-    color: #380B61;
+    color: #2c2830;
     margin-left: 7%;
 }
 
 #subtitulo{
     font-family: sans-serif;
-    color: rgb(73, 16, 73);
+    color: rgb(65, 53, 65);
     margin-left: 10%;
 }
 
@@ -27,7 +27,7 @@ body{
     background-color: #f0f8ff;
     font-family: sans-serif;
     font-size: 1em;
-    color: #59429d;
+    color: #433e53;
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
@@ -36,7 +36,7 @@ body{
 input, select, textarea, button{
     font-family: sans-serif;
     font-size: 1em;
-    color: #59429d;
+    color: #433e53;
     border-radius: 5px;
 }
 
@@ -54,7 +54,7 @@ input, select, textarea, button{
 
 .campo label{
     margin-bottom: 0.2em;
-    color: #59459d;
+    color: #433e53;
     display: block;
 }
 
@@ -65,7 +65,7 @@ fieldset.grupo .campo{
 
 .campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea{
     padding: 0.2em;
-    border: 1px solid #59459d;
+    border: 1px solid #433e53;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     display: block;
 }
@@ -80,7 +80,7 @@ fieldset.grupo .campo{
 
 .botao{
     font-size: 1.2em;
-    background: #59459d;
+    background: #433e53;
     border: 0;
     margin-bottom: 1em;
     color: white;
